# cpprestsdk

./: .gitignore  CMakeLists.txt.tpl  build-linux.sh  build-windows.bat  build.sh
.nxxm/: deps  opts
.tipi/: deps  id  opts  opts.windows
Release/: CMakeLists.txt.tpl  INSTALL.md.tpl
Release/include/cpprest/details/: SafeInt3.hpp  basic_types.h  cpprest_compat.h
Release/nxxmtrick/: CMakeLists.txt
Release/samples/BingRequest/: bingrequest.cpp
Release/samples/BlackJack/BlackJack_Client/: BlackJackClient.cpp
Release/samples/BlackJack/BlackJack_Server/: BlackJack_Server.cpp  Dealer.cpp  Table.cpp  messagetypes.h
Release/samples/CasaLens/: casalens.cpp  datafetcher.cpp
Release/samples/OAuth2Live/: MainPage.xaml.cpp
Release/samples/Oauth1Client/: Oauth1Client.cpp
Release/samples/Oauth2Client/: Oauth2Client.cpp
Release/samples/WindowsLiveAuth/: live_connect.h
Release/src/http/client/: http_client.cpp  http_client_asio.cpp  http_client_winhttp.cpp
Release/src/http/common/: http_msg.cpp
Release/src/http/listener/: http_listener.cpp  http_listener_msg.cpp  http_server_asio.cpp  http_server_httpsys.cpp
Release/src/http/oauth/: oauth1.cpp  oauth2.cpp
Release/src/pplx/: pplxwin.cpp  threadpool.cpp
Release/src/streams/: fileio_win32.cpp
Release/src/websockets/client/: ws_client_wspp.cpp
Release/tests/functional/json/: construction_tests.cpp  iterator_tests.cpp  json_numbers_tests.cpp  negative_parsing_tests.cpp  parsing_tests.cpp  to_as_and_operators_tests.cpp
Release/tests/functional/streams/: fstreambuf_tests.cpp  fuzz_tests.cpp  (+5 more)
(+62 files in other folders)
